crates/fidius-macro/tests/compile_fail/mut_self.stderr
error: fidius plugins are stateless: methods must take `&self`, not `&mut self`
  --> tests/compile_fail/mut_self.rs:19:15
   |
19 |     fn mutate(&mut self);
   |               ^
